# image2struct

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  install-dev.sh  install.sh  pre-commit.sh  requirements.txt  setup.cfg
.github/workflows/: test.yml  update-requirements.yml
experimental/: arxiv_api.py  pull_music_sheets.py
image2structure/latex/: constants.py  note.ipynb  prepare_csv.py  readme_dataset.md  renderer.py
image2structure/webpages/fetcher/: search.py
image2structure/webpages/renderer/: action.py  utils.py
installs/: install-latex.sh  install-webpage.sh
src/image2struct/: collect.py  end2end.py  run_specs.py  runner.py  test_collect.py  upload.py
src/image2struct/compilation/: compiler.py  latex_compiler.py  music_compiler.py  test_latex_compiler.py  test_music_compiler.py  test_webpage_compiler.py  utils.py  webpage_compiler.py
src/image2struct/compilation/tex/: compilation.py
src/image2struct/compilation/tex/test_data/cl_dice/: 01_intro.tex  03_proof.tex  06_appendix.tex  main.bib
src/image2struct/compilation/webpage/: driver.py  jekyll_server.py
src/image2struct/compilation/webpage/test_data/invalid_repo/: Gemfile
src/image2struct/compilation/webpage/test_data/valid_repo/: README.md  _config.yml
src/image2struct/fetch/: arxiv_fetcher.py  fetcher.py  github_fetcher.py  imslp_fetcher.py  test_arxiv_fetcher.py  test_github_fetcher.py  test_imslp_fetcher.py  utils.py
src/image2struct/fetch/arxivscraper/: arxivscraper.py
src/image2struct/filter/fetch_filters/: after_date_fetch_filter.py  date_fetch_filter.py  fetch_filter.py  github_fetch_filter.py  test_after_date_fetch_filter.py  test_date_fetch_filter.py  test_github_fetch_filter.py
src/image2struct/filter/file_filters/: file_filter.py  repo_filter.py  test_repo_filter.py  test_toxicity_filter.py  toxicity_filter.py
src/image2struct/filter/rendering_filters/: non_trivial_rendering_filter.py  rendering_filter.py  test_non_trivial_rendering_filter.py
src/image2struct/util/: credentials_utils.py
src/image2struct/wild/: wild_latex.py  wild_webpage.py
src/image2structure/: collect.py  end2end.py  run_specs.py  runner.py  test_collect.py  upload.py
src/image2structure/common/: dataset.py
src/image2structure/compilation/: compiler.py  latex_compiler.py  lillypond_compiler.py  music_compiler.py  test_latex_compiler.py  test_lillypond_compiler.py  test_music_compiler.py  test_webpage_compiler.py  utils.py  webpage_compiler.py
src/image2structure/compilation/musicsheet/: classifier.py
src/image2structure/compilation/tex/: compilation.py  constants.py
src/image2structure/compilation/tex/test_data/cl_dice/: 02_methods.tex  04_experiments.tex  05_theory.tex  main.bbl  main.tex
src/image2structure/compilation/webpage/: driver.py  jekyll_server.py
src/image2structure/compilation/webpage/test_data/invalid_repo/: Gemfile
src/image2structure/compilation/webpage/test_data/invalid_repo/_site/: feed.xml
src/image2structure/compilation/webpage/test_data/invalid_repo/css/: index.css
src/image2structure/compilation/webpage/test_data/valid_repo/: index.html  index.js
src/image2structure/compilation/webpage/test_data/valid_repo/_site/: feed.xml
src/image2structure/fetch/: arxiv_fetcher.py  fetcher.py  github_fetcher.py  imslp_fetcher.py  test_arxiv_fetcher.py  test_github_fetcher.py  test_imslp_fetcher.py  utils.py
src/image2structure/fetch/arxivscraper/: README.md  arxivscraper.py
src/image2structure/filter/fetch_filters/: after_date_fetch_filter.py  before_date_fetch_filter.py  date_fetch_filter.py  fetch_filter.py  github_fetch_filter.py  test_after_date_fetch_filter.py  test_before_date_fetch_filter.py  test_date_fetch_filter.py  test_github_fetch_filter.py
src/image2structure/filter/file_filters/: file_filter.py  repo_filter.py  test_repo_filter.py  test_toxicity_filter.py  toxicity_filter.py
src/image2structure/filter/file_filters/perspectiveapi/: constants.py
src/image2structure/filter/rendering_filters/: non_trivial_rendering_filter.py  rendering_filter.py  test_non_trivial_rendering_filter.py
src/image2structure/latex/: utils.py
src/image2structure/postprocessing/: image_filter.py  new_image_post_processor.py  post_processor.py
src/image2structure/util/: hierarchical_logger.py  image_utils.py
src/image2structure/webpages/: huggingface.ipynb  main.py
src/image2structure/webpages/deployment/: server.py
src/image2structure/webpages/fetcher/: filter.py
src/image2structure/wild/: wild_latex.py  wild_webpage.py
src_old/latex/: hf_data_card.txt  main.py  setup.py
src_old/webpages/: README.md  main.py
src_old/webpages/fetcher/: utils.py
src_old/webpages/renderer/: driver.py
