[metadata]
name = image2structure
version = 0.0.0
author = Stanford CRFM
author_email = contact-crfm@stanford.edu
description = Dataset creation for Image to Structure VLM evaluations
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dataset benchmarking latex webpage
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
# TODO: url

[options]
python_requires = >=3.8,<3.11
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

install_requires=
    # Basic
    python-dotenv~=1.0.1
    numpy~=1.26.4
    tqdm~=4.66.1
    requests~=2.31.0
    torch~=2.0.1
    torchvision~=0.15.2

    # Image processing
    Pillow~=10.2.0
    imagehash~=4.3.1

    # Uploading
    datasets~=2.16.1
    huggingface_hub~=0.20.2
    pandas~=2.1.4
    scikit-learn~=1.4.0

    # Toxicity
    dacite~=1.8.1
    google-api-python-client~=2.118.0

[options.extras_require]
latex =
    latex~=0.7.0
    pdf2image~=1.17.0

webpage =
    selenium~=4.17.2

sheetmusic =
    imslp~=0.2.3
    pdf2image~=1.17.0

# Install everything
all =
    image2structure[latex]
    image2structure[sheetmusic]
    image2structure[webpage]

# Development only
# Do not include in all
dev =
    pytest~=7.2.0
    pre-commit~=2.20.0
    # Errors produced by type checkers and linters are very version-specific
    # so they are pinned to an exact version.
    black==22.10.0
    mypy==1.5.1
    flake8==5.0.4


[options.entry_points]
console_scripts = 
    image2structure-collect = image2structure.collect:main
    image2structure-upload = image2structure.upload:main
    image2structure-end2end = image2structure.end2end:main


[options.packages.find]
where = src
exclude =
    tests*

# Settings for Flake8: Tool For Style Guide Enforcement
[flake8]
max-line-length = 120

# Ignore completely:
# E203 - White space before ':', (conflicts with black)
# E231 - Missing whitespace after ',', ';', or ':'
# E731 - do not assign a lambda expression, use a def
# W503 - line break before binary operator, (conflicts with black)
# W605 - invalid escape sequence '\', (causes failures)
ignore = E203,E231,E731,W503,W605

# Settings for Mypy: static type checker for Python 3
[mypy]
ignore_missing_imports = True
check_untyped_defs = True
# TODO: Remove disable_error_code
disable_error_code = annotation-unchecked
# TODO: Change disallow_untyped_defs to True
disallow_untyped_defs = False
